--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
       </p>
     </header>
 
-    <form id="login-form">
-      <input type="text" placeholder="Email or phone number" />
-      <input type="password" placeholder="Password" />
+    <form action="friends.html" method="GET" id="login-form">
+      <input name="username" type="text" placeholder="Email or phone number" />
+      <input name="password" type="password" placeholder="Password" />
       <input type="submit" value="Log In" />
-      <!-- <input type="submit" value="Sign Up" /> -->
+      <a href="#">Find Kokoa Account or Password</a>
     </form>
 
-    <a href="#">Find Kokoa Account or Password</a>
     <script
       src="https://kit.fontawesome.com/1d77c71d8f.js"
       crossorigin="anonymous"
