--- a/chats.html
+++ b/chats.html
@@ -54,6 +54,22 @@
           <div class="badge">1</div>
         </div>
       </div>
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/6259/6259900.png"
+            class="user-component__avatar"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Rudolf</h4>
+            <h6 class="user-component__subtitle">Santa! Where are you?</h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">21:22</span>
+          <div class="badge">1</div>
+        </div>
+      </div>
     </main>
 
     <nav class="nav">
@@ -76,7 +92,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
-            <span class="nav__notipoint"></span>
+            <span class="nav__notipoint point-bedge"></span>
             <i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
