--- a/friends.html
+++ b/friends.html
@@ -100,7 +100,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
-            <span class="nav__notipoint"></span>
+            <span class="nav__notipoint point-bedge"></span>
             <i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
