--- a/find.html
+++ b/find.html
@@ -29,10 +29,13 @@
       <h1 class="screen-header__title">Find</h1>
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
-        <span
-          ><i class="fas fa-cog fa-lg .point-bedge"
-            ><span class="point-bedge screen-header__notipoint"></span></i
-        ></span>
+        <a href="settings.html"
+          ><span
+            ><i class="fas fa-cog fa-lg .point-bedge"
+              ><span
+                class="point-bedge screen-header__notipoint"
+              ></span></i></span
+        ></a>
       </div>
     </header>
 
