--- a/more.html
+++ b/more.html
@@ -29,12 +29,12 @@
       <h1 class="screen-header__title">More</h1>
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
-        <span
-          ><span><i class="fas fa-music fa-lg"></i></span
+        <span><i class="fas fa-music fa-lg"></i></span
         ></span>
         <span
-          ><i class="fas fa-cog fa-lg .point-bedge">
-            <span class="point-bedge screen-header__notipoint"></span></i
+          ><a href="settings.html"
+            ><i class="fas fa-cog fa-lg .point-bedge">
+              <span class="point-bedge screen-header__notipoint"></span></i></a
         ></span>
       </div>
     </header>
